Added journey view page

--- a/TODO
+++ b/TODO
@@ -13,4 +13,4 @@
 ** Checking validation
 ** As much of the UI as possible
 * Maps - make them sensibly centre/zoom
-* Alert on successful save
+* Map search bar
